--- a/Micco/Base.lproj/Main.storyboard
+++ b/Micco/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -97,11 +98,18 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="uNf-74-ZDo">
-                        <barButtonItem key="rightBarButtonItem" title="Settings" id="A8M-h6-9gK">
-                            <connections>
-                                <segue destination="vyc-nC-lyU" kind="show" id="dq3-pq-8hW"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem title="Settings" id="A8M-h6-9gK">
+                                <connections>
+                                    <segue destination="vyc-nC-lyU" kind="show" id="dq3-pq-8hW"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Select" id="mlo-Su-RCk">
+                                <connections>
+                                    <action selector="toggleSelect:" destination="BYZ-38-t0r" id="CgO-TW-bXv"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="cameraButton" destination="WGH-hL-X2G" id="MzE-MP-Dsc"/>
